--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,14 @@ dependencies:
   intl: ^0.19.0
   provider: ^6.1.2
   geolocator: ^11.0.0
+  google_sign_in: ^6.2.1
+  googleapis: ^13.1.0
+  googleapis_auth: ^1.6.0
+  extension_google_sign_in_as_googleapis_auth: ^2.0.12
+  url_launcher: ^6.2.6
+  permission_handler: ^11.3.1
+  phone_state: ^1.0.4
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
