--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,13 @@ dependencies:
   permission_handler: ^11.3.1
   phone_state: ^1.0.4
   http: ^1.2.1
+  path_provider: ^2.1.3
+  flutter_callkit_incoming: ^2.0.4
+  dio: ^5.4.3+1
+  flutter_sms:
+    git:
+      url: https://github.com/fluttercommunity/flutter_sms.git
+      ref: master
 
 dev_dependencies:
   flutter_test:
